package com.example.pis_entrega1.Activities;

import androidx.appcompat.app.AppCompatActivity;

import android.content.Intent;
import android.os.Bundle;
import android.util.DisplayMetrics;
import android.view.View;
import android.widget.Button;
import com.example.pis_entrega1.*;

import com.example.pis_entrega1.R;


/**
 * Class to create an extra window to confirm an action.
 */
public class VentanaFlotante extends AppCompatActivity {

    /**
     * Buttons in the class
     */
    Button yes, no;

    /**
     * OnCreate method that initialize the buttons, sets the width and height of
     * the window and set the OnClickListener of each button to return the selected
     * one to the intent
     * @param savedInstanceState
     */
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_ventana_flotante);

        DisplayMetrics medidasVentana = new DisplayMetrics();
        getWindowManager().getDefaultDisplay().getMetrics(medidasVentana);

        int ancho = medidasVentana.widthPixels;
        int alto = medidasVentana.heightPixels;

        getWindow().setLayout((int)(ancho * 0.85), (int)(alto * 0.5));

        yes = findViewById(R.id.yes);
        no = findViewById(R.id.no);

        yes.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
                Intent intent = new Intent();
                intent.putExtra("result_verification", true);
                setResult(RESULT_OK, intent);
                finish();
            }
        });

        no.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
                Intent intent = new Intent();
                intent.putExtra("result_verification", false);
                setResult(RESULT_OK, intent);
                finish();
            }
        });

    }
}